language_tests/source_files/valid/move_semantics_ref_copy.tr
// Test: Move Semantics - References are Copyable
// References are always copyable (copying the reference, not the value).

struct NoCopy {
    value: int32
}

func main() {
    test_ref_copy()
    test_mut_ref_copy()
    std.print("PASS: Reference copy works correctly\n")
}

func test_ref_copy() {
    let x = NoCopy { value: 42 }
    let r1 = &x  // reference to x
    let r2 = r1  // copy the reference
    let r3 = r1  // copy again
    
    // All references are valid
    assert(r1.value == 42, "r1 reference")
    assert(r2.value == 42, "r2 reference")
    assert(r3.value == 42, "r3 reference")
}

func test_mut_ref_copy() {
    var x = NoCopy { value: 42 }
    
    // Take a mutable reference
    let r = &mut x
    r.value = 100
    
    // Now check x
    assert(x.value == 100, "Mutated through reference")
}
